# CppToolkit

./: .clang-format  .gitignore  README.md  build.bat  build.sh
AnyType/: CMakeLists.txt  test.cpp
Common/AnyType/include/: AnyType.h
Parallel/ThreadPool/: test.cpp
Parallel/ThreadPool/src/: ThreadPool.cpp
ThreadPool/: CMakeLists.txt
ThreadPool/include/: ThreadPool.h
cmake/: CMakeLists.txt
