cmake_minimum_required(VERSION 3.10)

project(UtilsForCpp)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_subdirectory(${CMAKE_SOURCE_DIR}/../AnyType ${CMAKE_BINARY_DIR}/Proj/AnyType)
add_subdirectory(${CMAKE_SOURCE_DIR}/../ThreadPool ${CMAKE_BINARY_DIR}/Proj/ThreadPool)
